<resources>
    <string name="app_name">PersonaDiary</string>
    <string name="num">P</string>
    <string name="relation">Relation</string>
    <string name="myPersonality">My personality is</string>
    <string name="changeInfo">Change my info ></string>
    <string name="goodType">Compatible personality</string>
    <string name="keyword">Keyword</string>
    <string name="myPersona">My persona</string>
    <string name="suitMe">Suit me well</string>
    <string name="myInfo">My info</string>
    <string name="settings">Settings</string>
    <string name="newPersona">New Persona</string>
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="personality">Personality</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add">Add</string>
    <string name="cancelIt">Cancel it?</string>
    <string name="addPersona">Add new persona?</string>
    <string name="editPersona">Edit my info?</string>
    <string name="deletePersona">Delete this persona?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="total">Total</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="maxCharacters">Up to 10 characters</string>
    <string name="extroverted">Extroverted</string>
    <string name="introverted">Introverted</string>
    <string name="intuitive">Intuitive</string>
    <string name="observant">Observant</string>
    <string name="thinking">Thinking</string>
    <string name="feeling">Feeling</string>
    <string name="judging">Judging</string>
    <string name="prospecting">Prospecting</string>
    <string name="worstMatch">Worst match</string>
    <string name="normalRelation">Normal relation</string>
    <string name="goodRelation">Good relation</string>
    <string name="mySoulmate">My soulmate</string>
    <string name="title_activity_type_detail">TypeDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>