<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/custom_dialog_bg"
    android:divider="@drawable/custom_dialog_div_hor"
    android:showDividers="middle"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:paddingHorizontal="50dp"
        android:textAppearance="@style/SmallBoldText"
        android:textColor="@color/fontBColor"
        android:text="@string/cancelIt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/custom_dialog_divider"
        android:showDividers="middle">
        <TextView
            android:id="@+id/tv_no"
            android:layout_gravity="center"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/SmallBoldText"
            android:textColor="@color/fontBColor"
            android:text="@string/no" />

        <TextView
            android:id="@+id/tv_yes"
            android:layout_gravity="center"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/SmallBoldText"
            android:textColor="@color/fontBColor"
            android:text="@string/yes" />
    </LinearLayout>
</LinearLayout>