<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".activity_add_persona.AddPersonaActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/EditToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/NormalBoldText"
            android:textColor="@color/fontBColor"
            android:text="@string/newPersona"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/name"
        android:textAppearance="@style/NormalBoldText"
        android:textColor="@color/fontBColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="20dp"
        android:textAppearance="@style/SmallBoldText"
        android:hint="@string/maxCharacters"
        android:backgroundTint="@color/disableColor"
        android:textCursorDrawable="@drawable/et_name_cursor"
        android:textColorHint="@color/disableColor"
        android:textColor="@color/fontBColor"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/ll_sex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textAppearance="@style/NormalBoldText"
                android:textColor="@color/fontBColor"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:weightSum="2">
                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/select_left_bg"
                    android:textColor="@drawable/select_sex_text"
                    android:textAlignment="center"
                    android:paddingHorizontal="15dp"
                    android:button="@null"
                    android:textAppearance="@style/SmallBoldText"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/select_right_bg"
                    android:textColor="@drawable/select_sex_text"
                    android:textAlignment="center"
                    android:paddingHorizontal="15dp"
                    android:button="@null"
                    android:textAppearance="@style/SmallBoldText"
                    android:text="@string/female" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_personality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personality"
                android:textAppearance="@style/NormalBoldText"
                android:textColor="@color/fontBColor"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:weightSum="2">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal">
                        <RadioButton
                            android:checked="true"
                            android:id="@+id/rb_i"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:background="@drawable/select_left_bg"
                            android:textColor="@drawable/select_sex_text"
                            android:textAlignment="center"
                            android:paddingHorizontal="15dp"
                            android:button="@null"
                            android:textAppearance="@style/SmallBoldText"
                            android:text="I" />

                        <RadioButton
                            android:id="@+id/rb_e"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:background="@drawable/select_right_bg"
                            android:textColor="@drawable/select_sex_text"
                            android:textAlignment="center"
                            android:paddingHorizontal="15dp"
                            android:button="@null"
                            android:textAppearance="@style/SmallBoldText"
                            android:text="E" />
                    </RadioGroup>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">
                        <RadioButton
                            android:checked="true"
                            android:id="@+id/rb_s"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:background="@drawable/select_left_bg"
                            android:textColor="@drawable/select_sex_text"
                            android:textAlignment="center"
                            android:paddingHorizontal="15dp"
                            android:button="@null"
                            android:textAppearance="@style/SmallBoldText"
                            android:text="S" />

                        <RadioButton
                            android:id="@+id/rb_n"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:background="@drawable/select_right_bg"
                            android:textColor="@drawable/select_sex_text"
                            android:textAlignment="center"
                            android:paddingHorizontal="15dp"
                            android:button="@null"
                            android:textAppearance="@style/SmallBoldText"
                            android:text="N" />
                    </RadioGroup>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">
                        <RadioButton
                            android:checked="true"
                            android:id="@+id/rb_t"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:background="@drawable/select_left_bg"
                            android:textColor="@drawable/select_sex_text"
                            android:textAlignment="center"
                            android:paddingHorizontal="15dp"
                            android:button="@null"
                            android:textAppearance="@style/SmallBoldText"
                            android:text="T" />

                        <RadioButton
                            android:id="@+id/tb_f"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:background="@drawable/select_right_bg"
                            android:textColor="@drawable/select_sex_text"
                            android:textAlignment="center"
                            android:paddingHorizontal="15dp"
                            android:button="@null"
                            android:textAppearance="@style/SmallBoldText"
                            android:text="F" />
                    </RadioGroup>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">
                        <RadioButton
                            android:checked="true"
                            android:id="@+id/rb_j"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:background="@drawable/select_left_bg"
                            android:textColor="@drawable/select_sex_text"
                            android:textAlignment="center"
                            android:paddingHorizontal="15dp"
                            android:button="@null"
                            android:textAppearance="@style/SmallBoldText"
                            android:text="J" />

                        <RadioButton
                            android:id="@+id/rb_p"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:background="@drawable/select_right_bg"
                            android:textColor="@drawable/select_sex_text"
                            android:textAlignment="center"
                            android:paddingHorizontal="15dp"
                            android:button="@null"
                            android:textAppearance="@style/SmallBoldText"
                            android:text="P" />
                    </RadioGroup>
                </LinearLayout>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/NormalBoldText"
                    android:textColor="@color/fontBColor"
                    android:gravity="center"
                    android:text=" -  A/T"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>