<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:background="@color/bgColor">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctl_myPersona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/bgColor"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/myPersona"
            app:collapsedTitleGravity="center_horizontal"
            app:expandedTitleGravity="top|center_horizontal"
            app:collapsedTitleTextAppearance="@style/CollapsedTextAppearance"
            app:expandedTitleTextAppearance="@style/ExpandedTextAppearance">
            <LinearLayout
                android:id="@+id/ll_totalPersona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/total_personas"
                android:weightSum="7"
                android:paddingHorizontal="20dp"
                android:paddingBottom="30dp"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myPersona"
                        android:textAppearance="@style/NormalRegularText"
                        android:layout_marginTop="60dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tv_totalNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/BigBoldText"
                            tools:text="0"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/num"
                            android:textAppearance="@style/NormalRegularText"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:layout_marginTop="60dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/NormalRegularText"
                        android:text="@string/suitMe"/>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginVertical="6dp"
                            android:layout_marginHorizontal="20dp">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="5dp">
                                <TextView
                                    android:id="@+id/tv_goodType1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/BigBoldText"
                                    tools:text="ISTJ-A/T"/>
                                <TextView
                                    android:id="@+id/tv_num1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/NormalBoldText"
                                    android:layout_marginStart="5dp"
                                    tools:text="5"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/NormalBoldText"
                                    android:text="@string/num"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="5dp">
                                <TextView
                                    android:id="@+id/tv_goodType2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/BigBoldText"
                                    tools:text="ISTJ-A/T"/>
                                <TextView
                                    android:id="@+id/tv_num2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/NormalBoldText"
                                    android:layout_marginStart="5dp"
                                    tools:text="5"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/NormalBoldText"
                                    android:text="@string/num"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="5dp">
                                <TextView
                                    android:id="@+id/tv_goodType3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/BigBoldText"
                                    tools:text="ISTJ-A/T"/>
                                <TextView
                                    android:id="@+id/tv_num3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/NormalBoldText"
                                    android:layout_marginStart="5dp"
                                    tools:text="5"/>
                                <TextView
                                    android:id="@+id/tv_num"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/NormalBoldText"
                                    android:text="@string/num"/>
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_marginTop="35dp"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_types"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:overScrollMode="never"
            android:paddingTop="20dp"
            android:paddingHorizontal="15dp"/>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bab"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/bgColor"
        android:paddingHorizontal="30dp"
        android:theme="@style/BottomAppBar"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:fabCradleMargin="5dp"
        app:fabCradleVerticalOffset="5dp">
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@android:color/transparent"
        app:tint="@null"
        android:elevation="0dp"
        app:borderWidth="0dp"
        android:src="@drawable/ic_outline_add_24"
        app:layout_anchor="@id/bab"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>